remove sonarqube warning